# FSE

./: .gitignore  .gitmodules  CMakeLists.txt  FileSystemEmulator.cpp  FileSystemEmulator.hpp  Path.hpp  README.md  Tests.cpp  tmp
app/: Interactive.cpp  StreamReader.cpp  commands  main.cpp
inc/: Directory.hpp  DirectoryTree.hpp  FileSystem.hpp  Interpreter.hpp  Link.hpp  Node.hpp  Path.hpp  Tree.hpp
src/: Directory.cpp  DirectoryTree.cpp  FileSystem.cpp  Interpreter.cpp  Link.cpp  Node.cpp  Path.cpp
test/: TestConsistency.cpp  TestTree.cpp  Tests.cpp  Tests.hpp  commands
test/consistency/: check  commands  state
